--- a/package.json
+++ b/package.json
@@ -13,14 +13,10 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.1",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "lucide-react": "^0.294.0",
-    "mongoose": "^8.0.3",
     "next": "14.0.4",
-    "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
